feat!: rebuild for Paper 26.2 and the nexus block ladder
Ports the plugin from Spigot 1.20.1 to Paper 26.2 and reworks it around the
nexus progression: each block is gated by its own `<tier>.nexus` permission and
hands out the permission for the next tier as an announced reward.

Platform
- paper-api 26.2, Java 25 toolchain, api-version 26.2, hand written plugin.yml.
- Drops every shaded dependency (ACF, MineDown, adventure-platform, shadow,
  plugin-yml) - Paper ships Adventure 5, so the jar is now plain.
- Commands rewritten on Paper's Brigadier API; ACF is unmaintained and reflects
  into server internals.
- Migrated off removed/deprecated API: bungee chat, Enchantment.getByKey and
  values(), AsyncPlayerChatEvent, Bukkit.getUnsafe().modifyItemStack,
  getDescription(), String inventory titles and item meta. Builds warning free.

No external dependencies
- Holograms render as vanilla TextDisplay/ItemDisplay entities instead of
  DecentHolograms or CMI. Entities are non-persistent, tagged in the PDC and
  respawned on chunk load, so a crash cannot leave orphans behind.
- AFK detection uses the server's own idle timer, replacing the UltraAFK,
  AFKPlus, Essentials and CMI integrations and the bundled libs/*.jar.
- Only PlaceholderAPI and LuckPerms remain, both optional.

Features
- Reward entries accept an optional message and broadcast flag, so unlocking the
  next block announces itself while bulk rewards stay silent. The legacy
  "weight;command" form still parses.
- New block fields: display name (%name%) and reward info (%reward_info%), both
  editable in the GUI, plus %broken% and %required_tool% placeholders.
- The break announcement now resolves %timeout%: the cooldown starts before the
  message and progress is cleared after it, so %breaks% still holds each
  player's own count.
- Cooldown separates natural expiry from cancellation, so a reload no longer
  broadcasts "block restored" for every block.
- Ships a five tier config: stone, gold, color, ore, mit