@@ -1,36 +1,31 @@
 package cz.raixo.blocks.block.rewards.commands.random;
 
 import cz.raixo.blocks.block.playerdata.PlayerData;
+import cz.raixo.blocks.block.rewards.commands.RawEntry;
 import cz.raixo.blocks.block.rewards.commands.RewardCommands;
 import cz.raixo.blocks.block.rewards.commands.RewardEntry;
 import cz.raixo.blocks.block.rewards.context.RewardContext;
-import cz.raixo.blocks.util.NumberUtil;
 import cz.raixo.blocks.util.SimpleRandom;
-import lombok.SneakyThrows;
 
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Random;
-import java.util.function.Supplier;
 
+/**
+ * Hands out exactly one entry per grant, chosen by weight: an entry with {@code chance: 30} is
+ * picked three times as often as one with {@code chance: 10}.
+ */
 public class RandomRewardCommands implements RewardCommands<RandomCommandEntry> {
 
-    static String MODE_NAME = "random";
+    static final String MODE_NAME = "random";
 
     private final List<RandomCommandEntry> entries = new LinkedList<>();
-    private final SimpleRandom<String> commands = new SimpleRandom<>();
+    private final SimpleRandom<RandomCommandEntry> pool = new SimpleRandom<>();
 
-    @SneakyThrows
-    public RandomRewardCommands(List<String> commands) {
-        for (String command : commands) {
-            String[] cmd = command.split(";", 2);
-            this.entries.add(
-                    new RandomCommandEntry(
-                            cmd[1],
-                            NumberUtil.parseInt(cmd[0]).orElseThrow((Supplier<Throwable>) () -> new IllegalArgumentException("Invalid chance on command " + command))
-                    )
-            );
+    public RandomRewardCommands(List<RawEntry> commands) {
+        for (RawEntry raw : commands) {
+            entries.add(RandomCommandEntry.of(raw));
         }
         refresh();
     }
@@ -41,13 +36,8 @@ public class RandomRewardCommands implements RewardCommands<RandomCommandEntry> 
     }
 
     @Override
-    public List<String> saveToList() {
-        List<String> value = new LinkedList<>();
-        for (RandomCommandEntry entry : entries) {
-            value.add(entry.getChance() + ";" + entry.getCommand());
-
-        }
-        return value;
+    public List<Object> saveToList() {
+        return entries.stream().map(RewardEntry::serialize).toList();
     }
 
     @Override
@@ -58,26 +48,24 @@ public class RandomRewardCommands implements RewardCommands<RandomCommandEntry> 
 
     @Override
     public void removeCommand(RewardEntry entry) {
-        if (entry instanceof RandomCommandEntry) {
-            entries.remove(entry);
-            refresh();
-        }
+        if (entries.remove(entry)) refresh();
     }
 
-    public String getRandom(Random random) {
-        return commands.next(random);
+    public RandomCommandEntry getRandom(Random random) {
+        return pool.next(random);
     }
 
     public void refresh() {
-        commands.clear();
+        pool.clear();
         for (RandomCommandEntry entry : entries) {
-            commands.add(entry.getChance(), entry.getCommand());
+            pool.add(entry.getChance(), entry);
         }
     }
 
     @Override
-    public List<String> rewardPlayer(PlayerData player, RewardContext context) {
-        return Collections.singletonList(getRandom(context.getRandom()));
+    public List<? extends RewardEntry> rewardPlayer(PlayerData player, RewardContext context) {
+        RandomCommandEntry entry = getRandom(context.getRandom());
+        return entry == null ? List.of() : List.of(entry);
     }
 
     @Override
